# pypads

./: .bumpversion.cfg  .gitchangelog.rc  .gitignore  .gitlab-ci.yml  .readthedocs.yml  ATT49644.env  CHANGELOG.rst  LICENSE  MANIFEST.in  README.DEV.md  README.md  gitlab-ci.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
app/: env.py
doc/: conf.py  getting_started.rst  index.rst  install.rst  preface.rst  pypads.rst
doc/classes/: base_class.rst  logging_fns.rst
doc/developers/: advanced_installation.rst
docs/: README.md  about.rst  big_toc_css.rst  conf.py  contents.rst  extensions.rst  getting_started.rst  index.rst  install.rst  mapping_files.rst  preface.rst  related_projects.rst
docs/_static/: background.css
docs/classes/: base_class.rst  containerize.rst  logging_fns.rst  utilities.rst
docs/files/: keras.2_3_1.yml  sklearn_0_19_1.yml  sklearn_example.json  sklearn_example.yml
docs/projects/: padrepads.rst  pypadre.rst  pypads_onto.rst  pypads_padre.rst
docs/sphinxext/: github_link.py
example/comparison/: evaluate.py  fit.py  gather.py  main.py  preprocess.py  split.py
example/steps/: steps.py
examples/: README.md  README.txt  custom_logging.py  decision_tree.py  pipeline.py
padrepads/: _name.py  _version.py  base.py
padrepads/code/: storage.py
padrepads/concepts/: dataset.py  splitter.py  util.py
padrepads/test/: test_decorators.py
pypadre_ext/: decorators.py  logging_functions.py  pypads_padre.py
pypadre_ext/concepts/: dataset.py  split.py
pypadre_ext/dataset/: dataset.py
pypadre_ext/test/: test_decorators.py
pypads/: __init__.py  _name.py  arguments.py  base.py  caches.py  decorators.py  exceptions.py  git.py  logging_functions.py  logging_util.py  managed_git.py  pads_loguru.py  pypads.py  util.py  variables.py
pypads.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pypads/analysis/: call_objects.py  pipeline_detection.py  time_keeper.py
pypads/app/: actuators.py  api.py  backend.py  base.py  call.py  decorators.py  env.py  pypads.py  results.py  validators.py
pypads/autolog/: hook.py  mapping.py  mappings.py  package_path.py  pypads_import.py  wrapping.py
pypads/bindings/: anchor.py  anchors.py  event_types.py  events.py  generic_visitor.py  hooks.py  scikit.py
pypads/cli/: app.py
pypads/command/: init.py  remote.py  run.py
pypads/examples/: custom_logging.py
pypads/functions/: logging.py  run_init.py  util.py
pypads/importext/: mappings.py  package_path.py  pypads_import.py  versioning.py
pypads/mlflow/: mlflow_autolog.py
pypads/model/: domain.py  json_schema.py  logger_call.py  logger_model.py  logger_output.py  metadata.py  mixins.py  models.py  storage.py  validation.py
pypads/parallel/: joblib.py  parallel.py  util.py
pypads/pipeline/: pipeline_detection.py
pypads/stdout/: stdout.py
pypads/steps/: steps.py
pypads/test/: base_test.py  dataset_test.py  import_test.py  test_custom_function.py  test_meta_info.py  test_order.py
pypads/utils/: files_util.py  logging_util.py  util.py
pypads/validation/: generic_visitor.py  logging_functions.py
pypads_onto/: logging_functions.py
pypadsext/: base.py  logging_functions.py  pypadsext.py  util.py
pypadsext/analysis/: doc_parsing.py  parameter_search.py
pypadsext/code/: storage.py
pypadsext/concepts/: dataset.py  splitter.py  util.py
pypadsext/functions/: logging.py  logging_functions.py  management_functions.py  run_init.py
pypadsext/test/: test_decorators.py
test/: base_test.py  test_custom_function.py  test_deep_custom_function.py  test_import_order.py  test_meta_info.py  test_order.py
test/keras/: test_keras.py
test/order/: test_order.py  test_order_e_m.py  test_order_m.py
test/sklearn/: base_sklearn_test.py  test_common_sklearn.py
test/test_classes/: dummy_classes.py
test/test_keras/: test_keras.py
test/test_order/: test_order.py  test_order_m.py
test/test_sklearn/: base_sklearn_test.py  test_common_sklearn.py
test_classes/: dummy_classes.py  dummy_mapping.py
tests/: base_test.py  test_configs.py  test_import_order.py  test_meta_info.py
tests/api/: logging.py
tests/backends/: managed_git.py  mlflow_.py
tests/injections/: injection_loggers.py  run_loggers.py
tests/misc/: decorators.py  managed_git.py
tests/test_containerize/: test_containerize_sklearn.py
tests/test_keras/: test_keras.py
tests/test_order/: test_order.py  (+1 more)
(+160 files in other folders)
