[tool.poetry]
name = "pypads"
version = "0.1.0"
description = "PyPaDS aims to to add tracking functionality to machine learning libraries."
authors = ["Thomas Weißgerber <thomas.weissgerber@uni-passau.de>"]

[tool.poetry.dependencies]
python = "^3.6.0"
cloudpickle = "^1.3.0"
mlflow = "^1.6.0"
boltons = "^19.3.0"
loguru = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2.5"
scikit-learn = "^0.21.3"
keras = "^2.3.1"
tensorflow = "^2.1.0"
psutil = "^5.7.0"
networkx = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
