[tool.poetry]
name = "pypads"
version = "0.1.8"
description = "PyPaDS aims to to add tracking functionality to machine learning libraries."
authors = ["Thomas Weißgerber <thomas.weissgerber@uni-passau.de>", "Ben Amor Mehdi <Mehdi.BenAmor@uni-passau.de>", "Christofer Fellicious <Christofer.Fellicious@uni-passau.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://www.padre-lab.eu/"
repository = "https://github.com/padre-lab-eu/pypads"
documentation = "https://readthedocs.org/projects/pypads/"
keywords = ["tracking", "reproducibility", "provenance", "function injection", "mapping files"]
classifiers = ["Development Status :: 3 - Alpha", "Intended Audience :: Developers", "Intended Audience :: Science/Research", "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)", "Natural Language :: English", "Operating System :: MacOS", "Operating System :: Microsoft :: Windows", "Operating System :: Unix", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Topic :: Scientific/Engineering :: Artificial Intelligence"]

[tool.poetry.dependencies]
python = "^3.7.0"
cloudpickle = "^1.3.0"
mlflow = "^1.6.0"
boltons = "^19.3.0"
loguru = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2.5"
pytest-faulthandler = "^2.0.1"
scikit-learn = "^0.21.3"
keras = "^2.3.1"
tensorflow = "^2.0.0b1"
psutil = "^5.7.0"
networkx = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
